--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="it">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Team Page</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <div class="container py-4">
-      <div class="text-center mb-4">
-        <h1 class="fw-bold text-primary-emphasis">Meet our Team</h1>
-        <p class="text-muted mb-0">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut aut odit,
-          voluptates minima eius, perspiciatis a nobis porro fuga libero accusamus
-          facilis vitae voluptatem tempora sunt! Consequuntur nesciunt beatae provident.
-        </p>
-      </div>
-    </div>
 
-    <script src="script.js"></script>
-  </body>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Team Page</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+</head>
+
+<body>
+	<div class="container py-4">
+		<div class="text-center mb-4">
+			<h1 class="fw-bold text-primary-emphasis">Meet our Team</h1>
+			<p class="text-muted mb-0">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut aut odit,
+				voluptates minima eius, perspiciatis a nobis porro fuga libero accusamus
+				facilis vitae voluptatem tempora sunt! Consequuntur nesciunt beatae provident.
+			</p>
+		</div>
+	</div>
+	<!-- Container per le card -->
+	<div class="row gx-2 gy-2" id="team-container"></div>
+	</div>
+	<script src="script.js"></script>
+</body>
+
 </html>
