[upd] index.html (minimal style), [upd] script.js (add members form, add members card) [upd] css (H1 style, form button style, form container style) [add] img (newmember.png)

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="EN">
+<html lang="it">
 
 <head>
 	<meta charset="UTF-8" />
@@ -12,15 +12,15 @@
 <body>
 	<div class="container py-4">
 		<div class="text-center mb-4">
-			<h1 class="team-title">Meet our Team</h1>
+			<h1 class="fw-bold text-primary-emphasis">Meet our Team</h1>
 			<p class="text-muted mb-0">
 				Siamo un team appassionato di tecnologia, design e innovazione. Collaboriamo ogni giorno per costruire
 				soluzioni semplici, funzionali e d’impatto.
 			</p>
 		</div>
-	</div>
-	<!-- Container per le card -->
-	<div class="row gx-2 gy-2" id="team-container"></div>
+
+		<!-- Container per le card -->
+		<div class="row gx-3 gy-3 px-3 px-md-5" id="team-container"></div>
 	</div>
 	<script src="script.js"></script>
 </body>
