[upd] script,js (removal of .closest), comments

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+	<!-- Descrizione azienda -->
 	<div class="container py-4">
 		<div class="text-center mb-4">
 			<h1 class="fw-bold text-primary-emphasis">Meet our Team</h1>
